# VolumeTool

./: .gitignore  README.md  build.bat
VolumeTool/: CMakeLists.txt  audiodevicemanager.cpp  audiodevicemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  voicemeeterremoteclient.cpp  voicemeeterremoteclient.h
